--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
 Revision 1.00
 date: 2007/03/18 14:05:00
 Finally ready for CPAN
+
+Revision 1.01
+date: 2007/04/15 12:12:00
+1) Improved behavior when using the $fd argument to the "new" method
+2) Improved behavior for Windoze use
+3) Slightly better documentation
